# OgreSampleApp

./: .gitignore  CMakeLists.txt  README.md  eagercmakereference.txt  ogre.cfg  plugins.cfg  quakemap.cfg  resources.cfg  samples.cfg  tests.cfg
include/: SampleBrowser.h  ogre_sample_app.hpp
src/: OgreSampleAppConfig.h.in  SampleBrowser.cpp  main.cpp  ogre_sample_app.cpp
src/config/windows/debug/: resources_d.cfg
src/config/windows/release/: resources.cfg
